--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,8 +3,34 @@
 	box-sizing: border-box;
 }
 
+a {
+	margin: 1%
+
+}
+
 h1 {
-	font-size: 300px;
+	font-size: 50px;
 	text-align: center;
-	color: fuchsia;
+	color: lightBlue;
+}
+
+.collectorsContainer {
+	.collector {
+		border: 3px solid lightBlue;
+		background: white;
+		width: 30%;
+		margin: 3% auto;
+		padding: 2%;
+		position: relative;
+	}
+
+		p {
+			margin: 1% 0;
+		}
+
+		.collector {
+			display: inline-block;
+			vertical-align: center;
+			margin-right: 10%;
+		}
 }
