add responsive sidebar

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,7 +25,7 @@ a:hover {
 button {
 	 color: #004878;
 	 background-color: #c0d6e4;
-	 display: inline-block;
+	 display: block;
 	 margin: 0.5;
 }
 
@@ -224,7 +224,7 @@ img {
 	    border: 3px solid #004878;
 	    background: #c0d6e4;
 	    padding: 5px;
-	    width: 700px;
+	    width: 36%;
 	    height: 100%;
 	    color: #004878; 
 	    font-weight: 700;
