trying to push changes to master

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -228,6 +228,8 @@ img {
 	    height: 100%;
 	    color: #004878; 
 	    font-weight: 700;
+	    right: 0;
+	    transform: translateX(100%);
 	    	
 	    	.sidebar-content {
 	    		overflow-y: scroll;
