--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,6 +20,7 @@ a {
 
 a:hover {
 	text-decoration: none;
+	
 }
 
 button {
@@ -27,6 +28,11 @@ button {
 	 background-color: #c0d6e4;
 	 display: block;
 	 margin: 0.5;
+}
+
+.container {
+
+
 }
 
 p {
@@ -58,7 +64,7 @@ h5 {
 
 input {
     height: 38px;
-    width: 100%;
+    width: 60%;
     padding: 6px 10px;
     margin-bottom: 1%;
     background-color: #fff;
@@ -66,6 +72,14 @@ input {
     border-radius: 4px;
     box-shadow: none;
     box-sizing: border-box;
+    border: 1px solid #004878;
+    transition: .1s border ease
+}
+
+input:focus {
+	outline: none;
+	border: 3px solid #004878;
+
 }
 
 textarea {
@@ -77,6 +91,11 @@ textarea {
 
 img {
 	width: 35%;
+
+}
+
+form {
+	 text-align: -webkit-center;
 
 }
 
