--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -78,7 +78,7 @@ img {
 
 }
 
-#loginBox {
+#login-box {
 	display: inline-block;
     float: right;
     margin-top: 125px;
@@ -101,13 +101,13 @@ img {
 
 }
 
-#piSymbol {
+#pi-symbol {
 	font-size: 200px;
 	color: #004878
 
 }
 
-#navBar {
+#nav-bar {
 	width: 45%;
     margin: auto;
 
@@ -119,7 +119,7 @@ img {
 
 }
 
-#tradeButton {
+#trade-button {
 	margin: 0%;
     padding: 3%;
     background-color: #004878;
@@ -182,14 +182,14 @@ img {
     border: 1px solid #004878;
 }
 
-.outgoingTradesContainer {
+.outgoing-trades-container {
 	border: 10px solid #004878;
 	padding: 5%;
 	background-color: #c0d6e4;
 
 }
 
-.incomingTradesContainer {
+.incoming-trades-container {
 	border: 10px solid  #004878;
 	padding: 5%;
 	background-color: #c0d6e4;
@@ -215,20 +215,18 @@ img {
 
 
 
-.collectorsContainer {
+.collectors-container {
+	text-align: -webkit-center;
 
 	.collector {
-		border: 10px solid #004878;
-		padding: 5%;
-		background-color: #c0d6e4;
-		width: 60%;
-		margin: 3% auto;
-		padding: 2%;
-		position: relative;
-		font-weight: 700;
-		display: inline-block;
-		vertical-align: center;
-		margin-right: 10%;
+		border: 1px solid #004878;
+	    background-color: #c0d6e4;
+	    width: 60%;
+	    font-weight: 700;
+	    display: inline-block;
+	    padding-left: 0;
+	    margin-bottom: 7%;
+	  
 	}
 			ul {
 	            list-style-type: none;
@@ -238,40 +236,38 @@ img {
 		                border-bottom: #004878 1px solid;
 		                border-left: #004878 6px solid;
 		                margin: 8px 0;
+		                text-align: left;
 		            }
 	        	}
 }
 
-.vinylContainer {
+.vinyl-container {
+	text-align: -webkit-center;
 
-		.vinyl {
-			border: 10px solid #004878;
-			padding: 5%;
-			background-color: #c0d6e4;
-			width: 60%;
-			margin: 3% auto;
-			padding: 2%;
-			position: relative;
-			font-weight: 700;
-			display: inline-block;
-			vertical-align: center;
-			margin-right: 10%;
-			color: #004878;
-	}
+	.vinyl {
+		border: 1px solid #004878;
+	    background-color: #c0d6e4;
+	    width: 60%;
+	    font-weight: 700;
+	    display: inline-block;
+	    padding-left: 0;
+	    margin-bottom: 7%;
+}
 			ul {
 	            list-style-type: none;
 
 		            >li{
-		                padding: 5px;
+		                 padding: 5px;
 		                border-bottom: #004878 1px solid;
 		                border-left: #004878 6px solid;
 		                margin: 8px 0;
+		                text-align: left;
 		            }
 	        	}
 
 }
-
-.detailContainer {
+/*
+.detail-container {
 	border: 10px solid #004878;
 	padding: 5%;
 	background-color: #c0d6e4;
@@ -279,14 +275,15 @@ img {
 
 }
 
-.tradeContainer {
+.trade-container {
 	border: 10px solid #004878;
 	padding: 5%;
 	background-color: #c0d6e4;
 
 }
+*/
 
-	.myVinylContainer { 
+	.my-vinyl-container { 
 		position: fixed; 
 		transition: 1s transform ease;
 	    top: 5px; 
