--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -123,12 +123,18 @@ img {
 }
 
 #trade-button {
-	margin: 0%;
-    padding: 3%;
-    background-color: #004878;
-    color: #c0d6e4;
-    text-decoration: none;
+	display: block;
+    width: 60%;
+    border: 1px solid #004878;
 
+}
+
+#offer-button{
+	font-size: 3em;
+    display: block;
+    width: 60%;
+    padding: 3%;
+    border: 1px solid #004878;
 }
 
 #delete {
@@ -222,6 +228,7 @@ img {
 	text-align: -webkit-center;
 
 	.collector {
+		color: #004878;
 		border: 1px solid #004878;
 	    background-color: #c0d6e4;
 	    width: 60%;
@@ -248,6 +255,7 @@ img {
 	text-align: -webkit-center;
 
 	.vinyl {
+		color: #004878;
 		border: 1px solid #004878;
 	    background-color: #c0d6e4;
 	    width: 60%;
@@ -260,11 +268,12 @@ img {
 	            list-style-type: none;
 
 		            >li{
-		                 padding: 5px;
+		                padding: 5px;
 		                border-bottom: #004878 1px solid;
 		                border-left: #004878 6px solid;
 		                margin: 8px 0;
 		                text-align: left;
+		                width: 60%;
 		            }
 	        	}
 
