--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,7 +22,18 @@ a {
 
 a:hover {
 	text-decoration: none;
+	background: lavender;
 	
+}
+
+a#trade-button:hover{
+	background: lavender;
+
+}
+
+button#offer-button:hover{
+	background: lavender;
+
 }
 
 
@@ -94,9 +105,24 @@ img {
 	 height: 25px;
 
 }
+#login-button:hover {
+	background: lavender;
+	
+
+}
 
 #register-button {
 	padding: 4%;
+
+}
+
+#register-button:hover{
+	background: lavender;
+
+}
+
+#shelf-button:hover{
+	background: lavender;
 
 }
 
@@ -123,18 +149,23 @@ img {
 }
 
 #trade-button {
-	display: block;
+	color: #000;
+	font-size: 3em;
+	background: lightgray;
+    display: block;
     width: 60%;
-    border: 1px solid #004878;
+    padding: 3%;
+    border: 1px solid black;
 
 }
 
 #offer-button{
+	background: lightgray;
 	font-size: 3em;
     display: block;
     width: 60%;
     padding: 3%;
-    border: 1px solid #004878;
+    border: 1px solid black;
 }
 
 #delete {
@@ -346,7 +377,7 @@ img {
 			        top: -2px;
 			        right: 101%;
 			        font-size: 20px;
-			        background: #c0d6e4;
+			        background: lightgray;;
 			        border: 3px solid #004878;
 			        border-radius: 0;
 			        width: 175px;
