--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -55,6 +55,7 @@ h1 {
 h3 {
     color: #004878;
     width: 40%;
+    margin-left: 1%;
   
 }
 
@@ -71,7 +72,7 @@ li {
 
 footer{
 	width: 100%;
-	height: 100px;
+	height: 100vh;
 	background: #004878;
 
 
@@ -89,8 +90,12 @@ img {
 
 }
 
-#login-box {
-	display: inline-block;
+.container{
+	min-width: 960px;
+
+}
+
+.login-box {
     float: right;
     margin-top: 125px;
     width: 50%;
@@ -309,22 +314,6 @@ img {
 	        	}
 
 }
-/*
-.detail-container {
-	border: 10px solid #004878;
-	padding: 5%;
-	background-color: #c0d6e4;
-	
-
-}
-
-.trade-container {
-	border: 10px solid #004878;
-	padding: 5%;
-	background-color: #c0d6e4;
-
-}
-*/
 
 	.my-vinyl-container { 
 		position: fixed; 
@@ -394,3 +383,7 @@ img {
 					margin-right: 10%;
 				}
 		}
+
+
+
+ 
