--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -87,7 +87,7 @@ textarea {
 }
 
 img {
-	width: 35%;
+	width: 100%;
 
 }
 
@@ -110,6 +110,16 @@ input{
     white-space: nowrap;
     padding-right: 2%;
 
+}
+
+.vinyl-cards {
+    width: 100%;
+    height: 160px;
+
+}
+
+a.vinyl:hover{
+	background: lavender;
 }
 
 #file-button{
@@ -223,6 +233,10 @@ input{
     padding-top: 2%;
     padding-left: 1%;
 
+}
+
+#user-image{
+	width: 60%;
 }
 
 .confirm {
